html/css/style.css
/* ... */
.agreediv a{
  color: #10153c;
  font-weight:bold;
  cursor:pointer;
}
#address.block9 {
  margin-bottom: 20px;
}
.block10 .back {
  float: left;
}
.block10 .next {
  float: right;
}
.sig .pad {
  height: 208%;
}
.sig {
  border: 10px solid #000;
  height: 250px;
  overflow: hidden;
}
.sig.current::before {
  border-bottom: 9px solid #60ba46;
  bottom: 40px;
  color: #888;
  content: "SIGN HERE";
  display: table;
  font-size: 75px;
  left: 50%;
  letter-spacing: 3px;
  margin-left: -205px;
  position: absolute;
  text-align: center;
  width: 410px;
  z-index: 99999;
}
.sig:hover::before{
	display:none;
}
.block11 .allert-wrapper {
  padding-top: 0;
  width: 100%;
}
.title-signature {
  font-size: 50px;
  margin-top: 70px;
  text-align: center;
}
.block11 .col-md-8 {
  display: table;
  margin-bottom: -210px;
}
.small-sign-text {
  display: table;
  font-size: 16px;
  margin: 0 auto;
  text-align: center;
  width: 85%;
  color:#10153c;
}
.small-sign-text a{
	color:#10153c;
	font-weight:bold;
	cursor:pointer;
}
.green-text a {
  font-family: CenturyGothicBold;
}
.benefit b {
  font-family: CenturyGothicBold;
}
.text-center:nth-child(7) figure div img {
  max-height: 115px;
}
#mileage .roundinput input,#mileage .roundinput input {
  font-family: CenturyGothicBold;
}
.block5 .col-md-8 + .clear {
  display: table;
  margin-top: -160px;
  width: 100%;
}
.block5 .col-md-8 {
  display: table;
}
#forcefield.block6 h2 {
  font-size: 50px;
  letter-spacing: 3px;
  line-height: 65px;
  text-align: center;
}
.block12 a.next.submit {
  border: 11px solid #0e173a;
  float: right;
  height: 200px;
  margin-top: 250px !important;
  width: 200px;
}
.next a.next.submit span {
  font-size: 18px;
  line-height: 20px;
}
.next .img-circle.submit.next img {
  margin-top: 10px;
  max-width: 90px;
}
#forcefield .roundinput input {
  margin: 40px auto;
}
#zipcode .roundinput input {
  font-family: CenturyGothicBold;
}
.block1 input::-webkit-input-placeholder {
   color: #7E8196;
   opacity: 1; 
}
.block1 input:-moz-placeholder { /* Firefox 18- */
   color: #7E8196; 
   opacity: 1;  
}
.block1 input::-moz-placeholder {  /* Firefox 19+ */
   color: #7E8196;
   opacity: 1;   
}
.block1 input:-ms-input-placeholder {  
   color: #7E8196;
   opacity: 1;  
}

::-webkit-input-placeholder {
   color: #10153C;
   opacity: 1; 
}
:-moz-placeholder { /* Firefox 18- */
   color: #10153C; 
   opacity: 1;  
}
::-moz-placeholder {  /* Firefox 19+ */
   color: #10153C;
   opacity: 1;   
}
:-ms-input-placeholder {  
   color: #10153C;
   opacity: 1;  
}
.blue-title strong {
  font-family: CenturyGothicBold;
}
.new-card-from.hide {
  position: relative;
  z-index: 9999;
}
.block10 .card-info-block input:nth-child(2) {
  margin: 10px 30px !important;
}
.block10 .card-info-block input {
  float: left;
  margin: 10px 0 !important;
  width: 203px !important;
}
.block10 .clear.card-info-block {
  display: table;
  margin: 0 auto;
}
input {
  background: transparent;
}
.section-screen-height {
  clear: both !important;
  margin: 0 !important;
  padding: 0 !important;
  width: 100% !important;
}
#covers {
  margin: 0 0 30px;
}
.vertical-align-screen-height{
	display:table-cell;
	vertical-align:middle;
}
.display-table{display:table;}
.benefit-mobile,.ontablet-icons{display:none !important;}
#benefits .benefit img {
  height: auto;
  width: auto;
}
nav.navbar{margin-bottom:0;}
#vinnumber .vinnum .img-responsive.ondesktop {
  display: table;
  margin-left: auto;
  margin-right: auto;
  max-width: 900px;
}
#listing.block4 .vertical-align-screen-height .container-fluid > .container {
  padding-left: 0 !important;
  padding-right: 0 !important;
}
#listing.block4 .leftcontent.rightcontent {
  padding-right: 0 !important;
}
#listing.block4 .leftcontent.yearsandmiles {
  padding-left: 0;
}
#forcefield.block6 .col-md-8.roundinput {
  margin-bottom: 135px;
}
#address.block7 .col-md-8.auto-center {
  margin-bottom: 55px;
}
#forcefield.block8 .col-md-8.auto-center {
  margin-bottom: 180px;
}
a {
  cursor: pointer;
}
.terms-content {
  margin: 0 auto -120px;
  text-align: center;
  width: 70%;
}
.terms-content p {
  font-size: 13px !important;
  line-height: unset !important;
}
.title-termsconditions {
  color: #10153c;
  font-size: 34px;
  margin-bottom: 40px;
  text-align: center;
}
#warranty a {
  margin-bottom: 20px;
}
.plus-onlymobile{display:none !important;}
#mbpi.block12 h2.blue-title { margin-bottom: 0 !important;}
#mbpi.block12 .multiplesignatures h3 {
  color: #54bb46;
  font-size: 30px;
  text-align: center;
}
#mbpi.block12 .multiplesignatures h3 {
  color: #54bb46;
  font-size: 30px;
  text-align: center;
}
.signaturebuttons {
  display: table;
  margin-bottom: 14px;
  margin-left: auto;
  margin-right: auto;
}
.eachsignature {
	border: 7px solid #10153c;
	border-radius: 50%;
	float: left;
	height: 145px;
	margin-right: 10px;
	width: 145px;
}
.eachsignature h5 {
  font-size: 18px;
  margin-bottom: 0;
  margin-top: 36px;
  text-align: center;
  text-transform: uppercase;
}
.eachsignature > h6 {
  font-family: "CenturyGothicBold";
  font-size: 33px;
  margin-top: 0;
  text-align: center;
}
.checkicon::before {
  color: #60b746;
  content:"\e013";
  display: table;
  font-family: "Glyphicons Halflings";
  font-size: 30px;
  font-weight: normal;
  margin-left: auto;
  margin-right: auto;
  margin-top: 5px;
}
.eachsignature .checkicon {
  display: none;
}
.eachsignature.completed .checkicon {
  display: block !important;
}
.eachsignature.completed > h5 {
  margin-top: 0;
}
label.agreetermslabel {
  border: 5px solid #10153c;
  cursor: pointer;
  display: table !important;
  float: left !important;
  height: 38px;
  margin-right: 12px;
  width: 38px;
  position:relative;
}
input#agreeterms:checked + label:before, input#agreeterms2:checked + label:before {
	content: "\e013";
	font-family: "Glyphicons Halflings";
	font-size: 17px;
}
.startingrecursive {
  color: #60ba46;
  font-size: 50px !important;
  margin-bottom: 20px;
  text-align: center;
}
/* ... */

